--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,15 +8,21 @@
     <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@300;400;700;900&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-
-    <link rel="stylesheet" href="style.css">
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <header>
         <div class="container">
-            <h1>🏎️ F1 MANAGER PRO</h1>
+            <div style="display: flex; justify-content: space-between; align-items: center;">
+                <h1>🏎️ F1 MANAGER PRO</h1>
+                <button id="loginBtn" class="btn-action" style="background:white; color:#333;" onclick="toggleLogin()"
+                    title="Admin Login">
+                    <i class="fa-solid fa-lock"></i>
+                </button>
+            </div>
+
             <div class="tabs">
                 <button class="tab-btn active" onclick="showTab('drivers')">PILOTOS</button>
                 <button class="tab-btn" onclick="showTab('constructors')">CONSTRUCTORES</button>
@@ -25,10 +31,6 @@
                 <button class="tab-btn" onclick="showTab('standings')">CLASIFICACIÓN</button>
             </div>
         </div>
-        <button id="loginBtn" class="btn-action" style="background:white; color:#333;" onclick="toggleLogin()"
-            title="Admin Login">
-            <i class="fa-solid fa-lock"></i>
-        </button>
     </header>
 
     <main class="container">
@@ -49,18 +51,17 @@
                         <div class="form-group"><label>Fecha Nac.</label><input type="date" id="birthDate" required>
                         </div>
                     </div>
-                    <div class="form-row" style="margin-top: 15px;">
-                        <div class="form-group">
-                            <label>Foto del Piloto (Archivo)</label>
-                            <input type="file" id="driverImage" accept="image/*">
-                        </div>
+                    <div class="form-row" style="margin-top:15px;">
+                        <div class="form-group"><label>Foto (Archivo)</label><input type="file" id="driverImage"
+                                accept="image/*"></div>
                     </div>
                     <button type="submit">Guardar Piloto</button>
                 </form>
             </section>
+
             <div class="search-container">
                 <i class="fa-solid fa-magnifying-glass search-icon"></i>
-                <input type="text" id="searchDrivers" class="search-input" placeholder="Buscar piloto o escudería..."
+                <input type="text" id="searchDrivers" class="search-input" placeholder="Buscar piloto..."
                     onkeyup="filterGrid('searchDrivers', 'drivers-grid')">
             </div>
             <div id="drivers-grid" class="grid"></div>
@@ -90,7 +91,6 @@
                 <input type="text" id="searchConstructors" class="search-input" placeholder="Buscar equipo..."
                     onkeyup="filterGrid('searchConstructors', 'constructors-grid')">
             </div>
-
             <div id="constructors-grid" class="grid"></div>
         </div>
 
@@ -99,8 +99,7 @@
                 <h2>Nuevo Circuito</h2>
                 <form id="circuitForm">
                     <div class="form-row">
-                        <div class="form-group"><label>Nombre</label><input type="text" id="circName"
-                                placeholder="Ej. Monza" required></div>
+                        <div class="form-group"><label>Nombre</label><input type="text" id="circName" required></div>
                         <div class="form-group"><label>País</label><input type="text" id="circCountry" required></div>
                     </div>
                     <div class="form-row">
@@ -125,21 +124,19 @@
                     </div>
                     <div class="form-row">
                         <div class="form-group"><label>Sprint Race</label><input type="time" id="circSprint"></div>
-                        <div class="form-group"><label>Carrera Principal</label><input type="time" id="circRace"
-                                required></div>
+                        <div class="form-group"><label>Carrera</label><input type="time" id="circRace" required></div>
                     </div>
-
-                    <div class="form-row" style="margin-top: 15px;">
-                        <div class="form-group"><label>Mapa del Circuito (Archivo)</label><input type="file"
-                                id="circImage" accept="image/*" required></div>
+                    <div class="form-row" style="margin-top:15px;">
+                        <div class="form-group"><label>Mapa (Archivo)</label><input type="file" id="circImage"
+                                accept="image/*" required></div>
                     </div>
-
                     <button type="submit">Guardar Circuito</button>
                 </form>
             </section>
+
             <div class="search-container">
                 <i class="fa-solid fa-magnifying-glass search-icon"></i>
-                <input type="text" id="searchCircuits" class="search-input" placeholder="Buscar circuito o país..."
+                <input type="text" id="searchCircuits" class="search-input" placeholder="Buscar circuito..."
                     onkeyup="filterGrid('searchCircuits', 'circuits-grid')">
             </div>
             <div id="circuits-grid" class="grid"></div>
@@ -165,12 +162,13 @@
                     <button type="submit" style="background: #FF8700;">Registrar</button>
                 </form>
             </section>
+
             <div class="search-container">
                 <i class="fa-solid fa-magnifying-glass search-icon"></i>
-                <input type="text" id="searchResults" class="search-input"
-                    placeholder="Filtrar por piloto, circuito, equipo..."
+                <input type="text" id="searchResults" class="search-input" placeholder="Filtrar..."
                     onkeyup="filterTable('searchResults', 'results-body')">
             </div>
+
             <div id="results-table-container" style="background:white; padding:20px; border-radius:10px;">
                 <table style="width:100%; text-align:left;">
                     <thead>
@@ -205,29 +203,29 @@
             </div>
         </div>
     </main>
+
+    <div id="loginModal" class="modal">
+        <div class="modal-content" style="max-width:350px; text-align:center; padding:30px;">
+            <span class="close-btn" onclick="document.getElementById('loginModal').style.display='none'">&times;</span>
+            <h2 style="color:#e10600; margin-top:0;">Acceso Admin</h2>
+            <input type="password" id="adminPassword" placeholder="Contraseña..."
+                style="width:80%; margin:15px 0; padding:10px; border:1px solid #ccc;">
+            <button onclick="checkLogin()"
+                style="width:100%; background:#e10600; color:white; padding:12px; border:none; cursor:pointer; font-weight:bold;">ENTRAR</button>
+        </div>
+    </div>
+
     <div id="profileModal" class="modal">
         <div class="modal-content">
-            <span class="close-btn" onclick="closeModal()">&times;</span>
-
-            <div class="modal-header-profile" id="modalHeader">
-            </div>
-
+            <span class="close-btn"
+                onclick="document.getElementById('profileModal').style.display='none'">&times;</span>
+            <div class="modal-header-profile" id="modalHeader"></div>
             <div class="stats-summary">
-                <div class="stat-box">
-                    <span id="statPoints">0</span>
-                    <label>Puntos</label>
-                </div>
-                <div class="stat-box">
-                    <span id="statWins">0</span>
-                    <label>Victorias</label>
-                </div>
-                <div class="stat-box">
-                    <span id="statPodiums">0</span>
-                    <label>Podios</label>
-                </div>
+                <div class="stat-box"><span id="statPoints">0</span><label>Puntos</label></div>
+                <div class="stat-box"><span id="statWins">0</span><label>Victorias</label></div>
+                <div class="stat-box"><span id="statPodiums">0</span><label>Podios</label></div>
             </div>
-
-            <h3 style="margin-top:20px; border-bottom:1px solid #eee;">Historial de Carreras</h3>
+            <h3 style="margin:20px; border-bottom:1px solid #eee;">Historial</h3>
             <div class="history-container">
                 <table style="width:100%; text-align:left; font-size:0.9rem;">
                     <thead>
@@ -238,28 +236,12 @@
                             <th>Pts</th>
                         </tr>
                     </thead>
-                    <tbody id="modalHistoryBody">
-                    </tbody>
+                    <tbody id="modalHistoryBody"></tbody>
                 </table>
             </div>
         </div>
     </div>
-    <div id="loginModal" class="modal">
-        <div class="modal-content" style="max-width: 350px; text-align: center; padding: 30px;">
-            <span class="close-btn" onclick="document.getElementById('loginModal').style.display='none'">&times;</span>
 
-            <h2 style="color: #e10600; margin-top:0;">Acceso Admin</h2>
-            <p style="color:#666;">Ingresa la contraseña maestra.</p>
-
-            <input type="password" id="adminPassword" placeholder="Contraseña..."
-                style="width: 80%; margin: 15px 0; padding: 10px; border:1px solid #ccc; border-radius:5px;">
-
-            <button onclick="checkLogin()"
-                style="width: 100%; background: #e10600; color: white; padding: 12px; border: none; border-radius: 5px; cursor: pointer; font-weight:bold;">
-                DESBLOQUEAR SISTEMA
-            </button>
-        </div>
-    </div>
     <script src="app.js"></script>
 </body>
 
